chore: presentation adjustments
