# src/subjects/subjects.controller.ts
@@ -1,52 +1,0 @@
-import {
-  Controller,
-  Get,
-  Post,
-  Body,
-  Patch,
-  Param,
-  Delete,
-} from '@nestjs/common';
-import { SubjectsService } from './subjects.service';
-import { CreateSubjectDto } from './dto/create-subject.dto';
-import { UpdateSubjectDto } from './dto/update-subject.dto';
-import { ApiCreatedResponse, ApiOperation, ApiTags } from '@nestjs/swagger';
-
-@ApiTags('Subjects')
-@Controller('subjects')
-export class SubjectsController {
-  constructor(private readonly subjectsService: SubjectsService) {}
-
-  @Post()
-  @ApiOperation({
-    summary: 'Create a new subject',
-    description: 'Create a new subject',
-  })
-  @ApiCreatedResponse({
-    description: 'Retorna dados da anuidade alterada.',
-    type: CreateSubjectDto,
-  })
-  create(@Body() createSubjectDto: CreateSubjectDto) {
-    return this.subjectsService.create(createSubjectDto);
-  }
-
-  @Get()
-  findAll() {
-    return this.subjectsService.findAll();
-  }
-
-  @Get(':id')
-  findOne(@Param('id') id: string) {
-    return this.subjectsService.findOne(+id);
-  }
-
-  @Patch(':id')
-  update(@Param('id') id: string, @Body() updateSubjectDto: UpdateSubjectDto) {
-    return this.subjectsService.update(+id, updateSubjectDto);
-  }
-
-  @Delete(':id')
-  remove(@Param('id') id: string) {
-    return this.subjectsService.remove(+id);
-  }
-}
