# swagger.json
@@ -1,120 +1,107 @@
 {
   "openapi": "3.0.0",
   "paths": {
-    "/": {
+    "/health": {
       "get": {
-        "operationId": "AppController_getHello",
+        "description": "Route used to check the status of the system and its dependencies.",
+        "operationId": "AppController_healthCheck",
         "parameters": [],
         "responses": {
           "200": {
-            "description": ""
+            "description": "The service is operating normally",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/PingResponseOk"
+                }
+              }
+            }
+          },
+          "503": {
+            "description": "Service unavailable",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/PingResponseErrorInterface"
+                }
+              }
+            }
           }
         },
+        "summary": "Check service status",
         "tags": [
-          "App"
+          "app"
         ]
       }
     },
-    "/subjects": {
+    "/user": {
       "post": {
-        "description": "Create a new subject",
-        "operationId": "SubjectsController_create",
+        "description": "Create a new user",
+        "operationId": "UserController_create",
         "parameters": [],
         "requestBody": {
           "required": true,
           "content": {
             "application/json": {
               "schema": {
-                "$ref": "#/components/schemas/CreateSubjectDto"
+                "$ref": "#/components/schemas/CreateUserDto"
               }
             }
           }
         },
         "responses": {
           "201": {
-            "description": "Retorna dados da anuidade alterada.",
+            "description": "Returns changed annuity data.",
             "content": {
               "application/json": {
                 "schema": {
-                  "$ref": "#/components/schemas/CreateSubjectDto"
+                  "$ref": "#/components/schemas/CreateUserDto"
+                }
+              }
+            }
+          },
+          "400": {
+            "description": "Error creating user",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/UserBadRequestResponseInterface"
                 }
               }
             }
           }
         },
-        "summary": "Create a new subject",
+        "summary": "Create a new user",
         "tags": [
-          "Subjects"
+          "user"
         ]
       },
       "get": {
-        "operationId": "SubjectsController_findAll",
+        "description": "Return all users",
+        "operationId": "UserController_findAll",
         "parameters": [],
         "responses": {
           "200": {
-            "description": ""
-          }
-        },
-        "tags": [
-          "Subjects"
-        ]
-      }
-    },
-    "/subjects/{id}": {
-      "get": {
-        "operationId": "SubjectsController_findOne",
-        "parameters": [
-          {
-            "name": "id",
-            "required": true,
-            "in": "path",
-            "schema": {
-              "type": "string"
-            }
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": ""
-          }
-        },
-        "tags": [
-          "Subjects"
-        ]
-      },
-      "patch": {
-        "operationId": "SubjectsController_update",
-        "parameters": [
-          {
-            "name": "id",
-            "required": true,
-            "in": "path",
-            "schema": {
-              "type": "string"
-            }
-          }
-        ],
-        "requestBody": {
-          "required": true,
-          "content": {
-            "application/json": {
-              "schema": {
-                "$ref": "#/components/schemas/UpdateSubjectDto"
+            "description": "Returns all users in the system.",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/CreateUserDto"
+                }
               }
             }
           }
         },
-        "responses": {
-          "200": {
-            "description": ""
-          }
-        },
+        "summary": "Return all users",
         "tags": [
-          "Subjects"
+          "user"
         ]
-      },
-      "delete": {
-        "operationId": "SubjectsController_remove",
+      }
+    },
+    "/user/{id}": {
+      "get": {
+        "description": "Return one of many users",
+        "operationId": "UserController_findOne",
         "parameters": [
           {
             "name": "id",
@@ -127,11 +114,29 @@
         ],
         "responses": {
           "200": {
-            "description": ""
+            "description": "Returns a specific user from the system.",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/SearchUserDto"
+                }
+              }
+            }
+          },
+          "404": {
+            "description": "User not found.",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/UserNotFoundRequestResponseInterface"
+                }
+              }
+            }
           }
         },
+        "summary": "Return one of many users",
         "tags": [
-          "Subjects"
+          "user"
         ]
       }
     }
@@ -139,52 +144,248 @@
   "info": {
     "title": "Api Swagger",
     "description": "Implementation swagger docs",
-    "version": "1.0",
+    "version": "0.0.1",
     "contact": {
-      "name": "Cerebrum",
+      "name": "YDUQS",
       "url": "https://arquiteturaestacio.visualstudio.com/JUCA/_wiki/wikis/JUCA.wiki/22390/-Cerebrum-Tech-2025",
-      "email": "ricardo.pena@yduqs.com.br"
+      "email": "tarcisio@yduqs.com.br"
     }
   },
   "tags": [
     {
-      "name": "Subjects",
-      "description": "Disciplinas da grade curricular"
+      "name": "user",
+      "description": "Collection of user endpoints"
     },
     {
-      "name": "App",
-      "description": ""
+      "name": "app",
+      "description": "Collection of service endpoints such as healthcheck"
     }
   ],
   "servers": [
     {
-      "url": "0.0.0.0:3000",
-      "description": "local"
+      "url": "http://0.0.0.0:3000",
+      "description": "Local"
+    },
+    {
+      "url": "http:/www.yduqs.com.br",
+      "description": "Production"
     }
   ],
   "components": {
     "schemas": {
-      "CreateSubjectDto": {
+      "ServiceCheck": {
+        "type": "object",
+        "properties": {
+          "status": {
+            "type": "string",
+            "example": "up",
+            "enum": [
+              "up",
+              "down"
+            ],
+            "description": "Current service status"
+          },
+          "details": {
+            "type": "string",
+            "example": "Service is online and responding",
+            "description": "Service status details"
+          }
+        },
+        "required": [
+          "status",
+          "details"
+        ]
+      },
+      "PingResponseOk": {
+        "type": "object",
+        "properties": {
+          "status": {
+            "type": "string",
+            "example": "success",
+            "enum": [
+              "success",
+              "error"
+            ],
+            "description": "Overall verification status"
+          },
+          "timestamp": {
+            "type": "string",
+            "example": "2025-03-28T14:30:00.000Z",
+            "description": "Verification Timestamp"
+          },
+          "checks": {
+            "type": "object",
+            "properties": {
+              "service": {
+                "$ref": "#/components/schemas/ServiceCheck"
+              },
+              "swagger": {
+                "$ref": "#/components/schemas/ServiceCheck"
+              }
+            },
+            "required": []
+          }
+        },
+        "required": [
+          "status",
+          "timestamp",
+          "checks"
+        ]
+      },
+      "PingResponseErrorInterface": {
+        "type": "object",
+        "properties": {
+          "status": {
+            "type": "string",
+            "example": "error",
+            "enum": [
+              "error"
+            ],
+            "description": "Verification error status"
+          },
+          "timestamp": {
+            "type": "string",
+            "example": "2025-03-28T14:30:00.000Z",
+            "description": "Error timestamp"
+          },
+          "checks": {
+            "type": "object",
+            "properties": {
+              "service": {
+                "example": {
+                  "status": "down",
+                  "details": "Error checking service health"
+                }
+              },
+              "error": {
+                "type": "string",
+                "example": "Service Unavailable",
+                "description": "Error message"
+              }
+            }
+          }
+        },
+        "required": [
+          "status",
+          "timestamp",
+          "checks"
+        ]
+      },
+      "CreateUserDto": {
         "type": "object",
         "properties": {
           "name": {
             "type": "string",
-            "description": "Name of the subject",
-            "default": "Math"
+            "example": "Tarcisio",
+            "description": "User full name"
+          },
+          "email": {
+            "type": "string",
+            "example": "tarcisio@yduqs.com.br",
+            "description": "User email"
+          },
+          "age": {
+            "type": "number",
+            "example": 30,
+            "description": "User age"
           }
         },
         "required": [
-          "name"
+          "name",
+          "email",
+          "age"
         ]
       },
-      "UpdateSubjectDto": {
+      "UserBadRequestResponseInterface": {
         "type": "object",
-        "properties": {}
+        "properties": {
+          "message": {
+            "type": "array",
+            "example": [
+              "age must be a number conforming to the specified constraints"
+            ],
+            "description": "Erros types received from class-validator"
+          },
+          "error": {
+            "type": "string",
+            "example": "Bad Request",
+            "description": "Message error"
+          },
+          "statusCode": {
+            "type": "number",
+            "example": 400,
+            "description": "Status Code"
+          }
+        },
+        "required": [
+          "message",
+          "error",
+          "statusCode"
+        ]
+      },
+      "SearchUserDto": {
+        "type": "object",
+        "properties": {
+          "id": {
+            "type": "number",
+            "example": 1,
+            "description": "User number ID"
+          },
+          "name": {
+            "type": "string",
+            "example": "Tarcisio",
+            "description": "User full name"
+          },
+          "email": {
+            "type": "string",
+            "example": "tarcisio@yduqs.com.br",
+            "description": "User email"
+          },
+          "age": {
+            "type": "number",
+            "example": 30,
+            "description": "User age"
+          }
+        },
+        "required": [
+          "id",
+          "name",
+          "email",
+          "age"
+        ]
+      },
+      "UserNotFoundRequestResponseInterface": {
+        "type": "object",
+        "properties": {
+          "status": {
+            "type": "string",
+            "example": "error",
+            "enum": [
+              "error"
+            ],
+            "description": "Status error of the request"
+          },
+          "timestamp": {
+            "type": "string",
+            "example": "2025-03-28T14:30:00.000Z",
+            "description": "Timestamp do erro"
+          },
+          "error": {
+            "type": "number",
+            "example": "Not found user ID 10",
+            "description": "Error message"
+          }
+        },
+        "required": [
+          "status",
+          "timestamp",
+          "error"
+        ]
       }
     }
   },
   "externalDocs": {
-    "description": "Link documentacão técnica",
+    "description": "Tech DOC",
     "url": "https://arquiteturaestacio.visualstudio.com/JUCA/_wiki/wikis/JUCA.wiki/22555/-DOC-missoes-recompensas-edge"
   }
 }
